--- a/entry/entry.css
+++ b/entry/entry.css
@@ -14,6 +14,9 @@ html {
 	margin:0 auto;
 	margin-top:40px;
 }
+.big_box:last-child {
+  margin-bottom:100px;
+}
 .main_title{
 	color: #333333;
 	font-size:24px
@@ -51,10 +54,9 @@ html {
 }
 .foot_box{
 	width: 100%;
-	height:50px;
+	height:90px;
 	position:fixed;
 	bottom:0;
-	margin-bottom: 40px;
 }
 .two_line{
 	border:none;
