--- a/entry/entry.css
+++ b/entry/entry.css
@@ -9,13 +9,14 @@ html {
 	height: 60px;
 	background-color: #20A0FF;
 }
+#doc_content{
+  height: 100%;
+  margin-bottom: 100px;
+}
 .big_box{
 	width: 450px;
 	margin:0 auto;
 	margin-top:40px;
-}
-.big_box:last-child {
-  margin-bottom:100px;
 }
 .main_title{
 	color: #333333;
@@ -55,7 +56,6 @@ html {
 .foot_box{
 	width: 100%;
 	height:90px;
-	position:fixed;
 	bottom:0;
 }
 .two_line{
